--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cargo-watch = "8.4.0"
+dotenv = "0.15"
+pin-project = "1.1.3"
+regex = "1.9.3"
+
